--- a/app/src/main/res/layout/fragment_based.xml
+++ b/app/src/main/res/layout/fragment_based.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
+    android:background="@color/moot"
     android:orientation="vertical"
-    tools:context=".BasedFragment" >
+    tools:context=".BasedFragment">
 
     <TextView
         style="?android:listSeparatorTextViewStyle"
@@ -14,10 +16,10 @@
         android:text="@string/crime_title_label" />
 
     <EditText
+        android:id="@+id/crime_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/crime_title"
-        android:hint="@string/crime_title_hint"/>
+        android:hint="@string/crime_title_hint" />
 
     <TextView
         style="?android:listSeparatorTextViewStyle"
@@ -28,7 +30,8 @@
     <Button
         android:id="@+id/crime_date"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/yotsuba" />
 
     <CheckBox
         android:id="@+id/action_based"
