--- a/app/src/main/res/layout/list_item_based.xml
+++ b/app/src/main/res/layout/list_item_based.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/moot">
 
     <TextView
         android:id="@+id/crime_title"
