--- a/app/src/main/res/layout/dialog_date.xml
+++ b/app/src/main/res/layout/dialog_date.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<DatePicker xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/datepicker"
+<ScrollView android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent">
+<LinearLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</DatePicker>
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
+    <DatePicker android:id="@+id/datepicker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:android="http://schemas.android.com/apk/res/android"></DatePicker>
+    <TimePicker
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/timepicker"></TimePicker>
+</LinearLayout>
+</ScrollView>
